objects/AcctSeed__Bank_Reconciliation__c.object
<CustomObject>
    <description>Used to document all aggregate bank reconciliation activity for a defined period. This includes detail information such as outstanding and cleared deposit and disbursement activity. This object will be deprecated in a future release.</description>
    <fields>
        <fullName>AcctSeed__Bank_Adjustments__c</fullName>
        <label>Bank Adjustments(+/-)</label>
        <summarizedField>AcctSeed__Bank_Adjustment__c.AcctSeed__Amount__c</summarizedField>
        <summaryForeignKey>AcctSeed__Bank_Adjustment__c.AcctSeed__Bank_Reconciliation__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Bank_Balance__c</fullName>
        <label>Bank Balance</label>
        <precision>18</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Calculated_Bank_Balance__c</fullName>
        <formula>AcctSeed__Ledger_Balance__c - AcctSeed__Outstanding_Disbursements2__c -AcctSeed__Outstanding_Deposits2__c+ AcctSeed__Bank_Adjustments__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Calculated Bank Balance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Cleared_Deposits__c</fullName>
        <label>Cleared Deposits</label>
        <summarizedField>AcctSeed__Bank_Reconciliation_Line2__c.AcctSeed__Amount__c</summarizedField>
        <summaryFilterItems>
            <field>AcctSeed__Bank_Reconciliation_Line2__c.AcctSeed__Bank_Reconciliation_Status__c</field>
            <operation>equals</operation>
            <value>Cleared</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>AcctSeed__Bank_Reconciliation_Line2__c.AcctSeed__Amount__c</field>
            <operation>greaterThan</operation>
            <value>0</value>
        </summaryFilterItems>
        <summaryForeignKey>AcctSeed__Bank_Reconciliation_Line2__c.AcctSeed__Bank_Reconciliation__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Cleared_Disbursements__c</fullName>
        <label>Cleared Disbursements</label>
        <summarizedField>AcctSeed__Bank_Reconciliation_Line2__c.AcctSeed__Amount__c</summarizedField>
        <summaryFilterItems>
            <field>AcctSeed__Bank_Reconciliation_Line2__c.AcctSeed__Bank_Reconciliation_Status__c</field>
            <operation>equals</operation>
            <value>Cleared</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>AcctSeed__Bank_Reconciliation_Line2__c.AcctSeed__Amount__c</field>
            <operation>lessOrEqual</operation>
            <value>0</value>
        </summaryFilterItems>
        <summaryForeignKey>AcctSeed__Bank_Reconciliation_Line2__c.AcctSeed__Bank_Reconciliation__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Difference__c</fullName>
        <formula>AcctSeed__Calculated_Bank_Balance__c - AcctSeed__Bank_Balance__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Difference</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AcctSeed__End_Date__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>AcctSeed__GL_Account__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>GL Account</label>
        <referenceTo>AcctSeed__GL_Account__c</referenceTo>
        <relationshipName>Bank_Reconciliations</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Ledger_Balance__c</fullName>
        <label>Ledger Balance</label>
        <precision>18</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Minus_Outstanding_Deposits__c</fullName>
        <formula>AcctSeed__Outstanding_Deposits2__c *-1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Minus: Outstanding Deposits</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Outstanding_Deposits2__c</fullName>
        <label>Outstanding Deposits</label>
        <summarizedField>AcctSeed__Bank_Reconciliation_Line2__c.AcctSeed__Amount__c</summarizedField>
        <summaryFilterItems>
            <field>AcctSeed__Bank_Reconciliation_Line2__c.AcctSeed__Bank_Reconciliation_Status__c</field>
            <operation>equals</operation>
            <value>Outstanding</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>AcctSeed__Bank_Reconciliation_Line2__c.AcctSeed__Amount__c</field>
            <operation>greaterThan</operation>
            <value>0</value>
        </summaryFilterItems>
        <summaryForeignKey>AcctSeed__Bank_Reconciliation_Line2__c.AcctSeed__Bank_Reconciliation__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Outstanding_Deposits__c</fullName>
        <description>This field is deprecated and no longer used.</description>
        <label>zDep-Outstanding Deposits</label>
        <summarizedField>AcctSeed__Bank_Reconciliation_Line__c.AcctSeed__Amount__c</summarizedField>
        <summaryFilterItems>
            <field>AcctSeed__Bank_Reconciliation_Line__c.AcctSeed__Amount__c</field>
            <operation>greaterThan</operation>
            <value>0</value>
        </summaryFilterItems>
        <summaryForeignKey>AcctSeed__Bank_Reconciliation_Line__c.AcctSeed__Bank_Reconciliation__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Outstanding_Disbursements2__c</fullName>
        <label>Outstanding Disbursements</label>
        <summarizedField>AcctSeed__Bank_Reconciliation_Line2__c.AcctSeed__Amount__c</summarizedField>
        <summaryFilterItems>
            <field>AcctSeed__Bank_Reconciliation_Line2__c.AcctSeed__Bank_Reconciliation_Status__c</field>
            <operation>equals</operation>
            <value>Outstanding</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>AcctSeed__Bank_Reconciliation_Line2__c.AcctSeed__Amount__c</field>
            <operation>lessOrEqual</operation>
            <value>0</value>
        </summaryFilterItems>
        <summaryForeignKey>AcctSeed__Bank_Reconciliation_Line2__c.AcctSeed__Bank_Reconciliation__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Outstanding_Disbursements__c</fullName>
        <description>This field is deprecated and no longer used.</description>
        <label>zDep-Outstanding Disbursements</label>
        <summarizedField>AcctSeed__Bank_Reconciliation_Line__c.AcctSeed__Amount__c</summarizedField>
        <summaryFilterItems>
            <field>AcctSeed__Bank_Reconciliation_Line__c.AcctSeed__Amount__c</field>
            <operation>lessOrEqual</operation>
            <value>0</value>
        </summaryFilterItems>
        <summaryForeignKey>AcctSeed__Bank_Reconciliation_Line__c.AcctSeed__Bank_Reconciliation__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Plus_Outstanding_Disbursements__c</fullName>
        <formula>AcctSeed__Outstanding_Disbursements2__c *-1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Plus: Outstanding Disbursements</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Reconciliation_Date__c</fullName>
        <label>Reconciliation Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Start_Date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <label>Legacy Bank Reconciliation</label>
    <listViews>
        <fullName>AcctSeed__All</fullName>
        <columns>NAME</columns>
        <columns>AcctSeed__GL_Account__c</columns>
        <columns>AcctSeed__Reconciliation_Date__c</columns>
        <columns>AcctSeed__Ledger_Balance__c</columns>
        <columns>AcctSeed__Calculated_Bank_Balance__c</columns>
        <columns>AcctSeed__Bank_Balance__c</columns>
        <columns>AcctSeed__Difference__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Bank Reconciliation Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Legacy Bank Reconciliations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>